--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit BNO08x@^1.2.5
+	adafruit/Adafruit ICM20X@^2.0.7
+	adafruit/Adafruit LIS331@^1.0.6
