Adding seperate systems

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,47 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
+[platformio]
+default_envs = flight
+
+[env]
 platform = teensy
 board = teensy41
 framework = arduino
+build_flags =
+	-DENABLE_SERIAL_LOGGING=1
 lib_deps = 
 	adafruit/Adafruit BMP3XX Library@^2.1.6
 	adafruit/Adafruit BNO08x@^1.2.5
 	adafruit/Adafruit ICM20X@^2.0.7
 	adafruit/Adafruit LIS331@^1.0.6
+
+[env:flight]
+build_src_filter =
+	+<main.cpp>
+	+<FlightController.cpp>
+	+<Soil485.cpp>
+
+[env:test_bno]
+build_src_filter =
+	+<test_bno.cpp>
+
+[env:test_orient_motor]
+build_src_filter =
+	+<test_orient_motor.cpp>
+
+[env:test_auger_motor]
+build_src_filter =
+	+<test_auger_motor.cpp>
+
+[env:test_lead_screw]
+build_src_filter =
+	+<test_lead_screw.cpp>
+
+[env:test_water_motor]
+build_src_filter =
+	+<test_water_motor.cpp>
+
+[env:test_orient_with_bno]
+build_src_filter =
+	+<test_orient_with_bno.cpp>
