added BNO055 folder and made all necesarry changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = flight
 platform = teensy
 board = teensy41
 framework = arduino
-build_flags =
+build_flags = 
 	-DENABLE_SERIAL_LOGGING=1
 lib_deps = 
 	adafruit/Adafruit BMP3XX Library@^2.1.6
@@ -24,31 +24,66 @@ lib_deps =
 	adafruit/Adafruit LIS331@^1.0.6
 
 [env:flight]
-build_src_filter =
+build_src_filter = 
 	+<main.cpp>
 	+<FlightController.cpp>
 	+<Soil485.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_bno]
-build_src_filter =
+build_src_filter = 
 	+<test_bno.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_orient_motor]
-build_src_filter =
+build_src_filter = 
 	+<test_orient_motor.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_auger_motor]
-build_src_filter =
+build_src_filter = 
 	+<test_auger_motor.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_lead_screw]
-build_src_filter =
+build_src_filter = 
 	+<test_lead_screw.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_water_motor]
-build_src_filter =
+build_src_filter = 
 	+<test_water_motor.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
 
 [env:test_orient_with_bno]
-build_src_filter =
+build_src_filter = 
 	+<test_orient_with_bno.cpp>
+lib_deps = 
+	adafruit/Adafruit BNO055@^1.6.4
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit LIS331@^1.0.6
+	adafruit/Adafruit ICM20X@^2.0.7
