Formatting systems correctly and enabling compiling

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ board = teensy41
 framework = arduino
 build_flags = 
 	-DENABLE_SERIAL_LOGGING=1
+	-Isrc
 lib_deps = 
 	adafruit/Adafruit BMP3XX Library@^2.1.6
 	adafruit/Adafruit BNO08x@^1.2.5
